Updated discode CLI
Now with some basic tests

--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,10 @@
 envlist = py35,py27,pep8
 
 [testenv]
+deps = -rtest-requirements.txt
 commands =
     py.test --verbose \
-      --cov mistral_lint --cov-report term-missing --cov-report html \
+      --cov discode --cov-report term-missing \
       {posargs}
 
 [testenv:pep8]
